Finish First Draft

--- a/index.html
+++ b/index.html
@@ -192,10 +192,55 @@
             <article class="style-section" id="imagery">
                 <h2 class="title-section">Our Imagery</h2>
                 <hr>
+                <p>Images are powerful. They can capture the imagination in ways that words can't. Images communicate, and we want the images we use to communicate a consistent message. When selecting an image, it should match at least one or more of these criteria.</p>
+                <div class="imagery">
+                    <div class="image"><img src="assets/youthful.jpeg"></div>
+                    <div class="caption">
+                        <h3 class="subtitle">Young People, Distribution and Joy</h3>
+                        <p>Our images should feature Young People, Bible Distribution and Joy. Here is one image that captures all three in a single image.</p>
+                    </div>
+                </div>
+                <div class="imagery">
+                    <div class="image"><img src="assets/distribution.jpeg"></div>
+                    <div class="caption">
+                        <h3 class="subtitle">Distribution and Beautiful Settings</h3>
+                        <p>Our images should feature people going into hard-to-reach and beautiful place to distribute Bibles. Beautiful scenery catches the eye and draws people in, allowing them to see themselves in the story.</p>
+                    </div>
+                </div>
+                <div class="imagery">
+                    <div class="image"><img src="assets/engaging.jpeg"></div>
+                    <div class="caption">
+                        <h3 class="subtitle">Bible Engagement and Literal Imagery</h3>
+                        <p>Our images should feature people engaging with the Bible, because the goal is not just distribution but engagement. Our images can be literal, featuring a person literally reading the Bible, or a person literally distributing a Bible.</p>
+                    </div>
+                </div>
+                <div class="imagery">
+                    <div class="image"><img src="assets/mountaintop.jpg"></div>
+                    <div class="caption">
+                        <h3 class="subtitle">Inclusive and Optimistic</h3>
+                        <p>Our images should be inclusive of all types of people, regardless of race, nationality and gender. Our images should feature people from a variety of backgrounds, and should communicate an optimistic outlook on life.</p>
+                    </div>
+                </div>
+                <div class="imagery">
+                    <div class="image"><img src="assets/infographic.jpg"></div>
+                    <div class="caption">
+                        <h3 class="subtitle">Informative</h3>
+                        <p>Our images can be informative when necessary, though our preference is to let images speak for themselves. Infographics should be used sparingly, but when used should carry a sense of shock or "wow" to grab the readers attention. Infographics can also be used to more clearly explain data, and as a helper in a longer body of text.</p>
+                    </div>
+                </div>
+                <hr>
             </article>
             <article class="style-section" id="voice">
                 <h2 class="title-section">Our Voice</h2>
                 <hr>
+                <h3 class="subtitle">Optimistic</h3>
+                <p>We approach our tasks and our life with optimism, joy and a can-do attitude, and we want others to join us on the journey. We don't look at problems as obstacles, but as opportunities, and we can't wait to see what will come next.
+                </p>
+                <h3 class="subtitle">Passionate</h3>
+                <p>We don't want to just End Bible Poverty, we want to End Bible Poverty <span class="text-logo">NOW!</span> We are excited and ready to conquer our task on language and one people-group at a time, and we won't stop until we do. We believe everyone should join us on this epic journey.</p>
+                <h3 class="subtitle">Genuine</h3>
+                <p>We are genuine, trustworthy, authentic and engaging. We don't believe in hype, but truly believe we can accomplish the tasks ahead, and we believe everyone else can too. We are fully present in our conversations because we believe every person matters.</p>
+                
             </article>
             <!--<article class="style-section" id="web">
                 <h2 class="title-section">Our Website</h2>
