--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h3 class="subtitle">Our Mission</h3>
                 <p>We believe a Bible can transform a life. We will do whatever it takes to get a Bible to every individual on earth because every Bible is a seed planted.</p>
                 <h3 class="subtitle">Our Vision</h3>
-                <p>We are one of numerous initiatives dedicated to the global, Christian missionary effort to fulfill the Great Commission through Bible translation and distribution. We are led by Loren Cunningham, founder of international Christian missionary movement, YWAM whose organization endeavors to translate the Bible into every language and distribute bibles into every home by December 31, 2020.
+                <p>We are one of numerous initiatives dedicated to the global, Christian missionary effort to fulfill the Great Commission through Bible translation and distribution. We are led by Loren Cunningham, founder of international Christian missionary movement YWAM, whose organization endeavors to translate the Bible into every language and distribute bibles into every home by December 31, 2020.
                 </p>
                 <h3 class="subtitle">Our Values</h3>
                 <h4 class="value">Consecrate</h4>
@@ -171,7 +171,7 @@
                         <h3>Industry is for Headings</h3>
                         <p>This is Industry. We use this font for headings. You may recognize it. We use it for our logo. We can use Industry Book, Industry Book Italic and Industry Bold to make our headings stand out from the rest of our copy.</p>
                         <h3>Industry Bold Italic is NOT for Headings</h3>
-                        <p>We love our heading font, and we love our logo, but we want them to be different. Therefore, we don't use Industry Bold Italic for anything except our logo.</p>
+                        <p>We love our heading font, and we love our logo, but we want them to be different from one another. Therefore, we don't use Industry Bold Italic for anything except our logo.</p>
                     </div>
                 </div>
                 <div class="body-font">
@@ -192,7 +192,7 @@
             <article class="style-section" id="imagery">
                 <h2 class="title-section">Our Imagery</h2>
                 <hr>
-                <p>Images are powerful. They can capture the imagination in ways that words can't. Images communicate, and we want the images we use to communicate a consistent message. When selecting an image, it should match at least one or more of these criteria.</p>
+                <p>Images are powerful. A picture can capture the imagination and allow the viewer an experience beyond what words can describe. Carefully chosen images communicate a consistent and intentional message. When selecting an image, it should match at least one or more of these criteria.</p>
                 <div class="imagery">
                     <div class="image"><img src="assets/youthful.jpeg"></div>
                     <div class="caption">
@@ -204,7 +204,7 @@
                     <div class="image"><img src="assets/distribution.jpeg"></div>
                     <div class="caption">
                         <h3 class="subtitle">Distribution and Beautiful Settings</h3>
-                        <p>Our images should feature people going into hard-to-reach and beautiful place to distribute Bibles. Beautiful scenery catches the eye and draws people in, allowing them to see themselves in the story.</p>
+                        <p>Our images should feature people going into hard-to-reach and beautiful places to distribute Bibles. Beautiful scenery catches the eye and draws people in, allowing them to see themselves in the story.</p>
                     </div>
                 </div>
                 <div class="imagery">
@@ -237,7 +237,7 @@
                 <p>We approach our tasks and our life with optimism, joy and a can-do attitude, and we want others to join us on the journey. We don't look at problems as obstacles, but as opportunities, and we can't wait to see what will come next.
                 </p>
                 <h3 class="subtitle">Passionate</h3>
-                <p>We don't want to just End Bible Poverty, we want to End Bible Poverty <span class="text-logo">NOW!</span> We are excited and ready to conquer our task on language and one people-group at a time, and we won't stop until we do. We believe everyone should join us on this epic journey.</p>
+                <p>We don't just want to End Bible Poverty, we want to End Bible Poverty <span class="text-logo">NOW!</span> We are excited and ready to conquer our task one language and one people-group at a time, and we won't stop until we do. We believe everyone should join us on this epic journey.</p>
                 <h3 class="subtitle">Genuine</h3>
                 <p>We are genuine, trustworthy, authentic and engaging. We don't believe in hype, but truly believe we can accomplish the tasks ahead, and we believe everyone else can too. We are fully present in our conversations because we believe every person matters.</p>
                 
