Remove orange, increase color size

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                 <h2 class="title-section">Our Colors</h2>
                 <hr>
                 <div class="colors-container">
-                    <div class="primary-orange">
+                    <!--<div class="primary-orange">
                         <ul>
                             <li class="color-title"><b>Primary Orange</b></li>
                             <li><b>#</b>FFA001</li>
                             <li><b>R</b>255<b> G</b>160 <b>B</b>1</li>
                             <li><b>C</b>0 <b>M</b>37 <b>Y</b>100 <b>K</b>0</li>
                         </ul>
-                    </div>
+                    </div>-->
                     <div class="primary-yellow">
                         <ul>
                             <li class="color-title"><b>EBPN Yellow</b></li>
@@ -221,7 +221,6 @@
                         <p>Our images can be informative when necessary, though our preference is to let images speak for themselves. Infographics should be used sparingly, but when used should carry a sense of shock or "wow" to grab the readers attention. Infographics can also be used to more clearly explain data, and as a helper in a longer body of text.</p>
                     </div>
                 </div>
-                <hr>
             </article>
             <article class="style-section" id="voice">
                 <h2 class="title-section">Our Voice</h2>
