fix broken typography link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </article>
-            <article class="style-section" id="typograhy">
+            <article class="style-section" id="typography">
                 <h2 class="title-section">Our Typography</h2>
                 <hr>
                 <div class="heading-font">
