--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navbar">
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#story">Our Story</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#story">Story</a></li>
                     <li class="nav-item"><a class="nav-link" href="#logo">Logo</a></li>
                     <li class="nav-item"><a class="nav-link" href="#colors">Colors</a></li>
                     <li class="nav-item"><a class="nav-link" href="#typography">Typography</a></li>
@@ -34,33 +34,30 @@
             <article class="style-section" id="story">
                 <h2 class="title-section">Our Story</h2>
                 <hr>
-                <p>End Bible Poverty Now is a global Christian missions initiative
-                    to fulfill the Great Commission through Bible translation,
-                    distribution and engagement. We train, equip and lead others in translation,
-                    publication, duplication, distribution and engagement with the Bible. We believe
-                    the end of Bible poverty begins in the heart of each individual, and results
-                    in the spreading of the Word of God to every corner of the earth. We can <span class="text-logo">
-                        END BIBLE POVERTY NOW
-                    </span>! <span class="slogan">See yourself in the story.</span>
+                <p>We are a global Christian missions initiative
+                    to fulfill the Great Commission through prayer, translation, publication, distribution, education and motivation. We believe the end of Bible poverty begins in the heart of each individual, and results
+                    in the spreading of the Word of God to families, communities, cities, nations and to the ends of the earth.
                 </p>
                 <h3 class="subtitle">Our Mission</h3>
-                <p>We believe a Bible can transform a life. We will do whatever it takes to get a Bible to every individual on earth because every Bible is a seed planted.</p>
+                <p>With urgency, we empower people to transform individuals, families, communities, cities and nations through prayer, translation, publication, distribution, education and motivation.</p>
                 <h3 class="subtitle">Our Vision</h3>
-                <p>We are one of numerous initiatives dedicated to the global, Christian missionary effort to fulfill the Great Commission through Bible translation and distribution. We are led by Loren Cunningham, founder of international Christian missionary movement YWAM, whose organization endeavors to translate the Bible into every language and distribute bibles into every home by December 31, 2020.
+                <p>A Bible in every heart language made available to every individual on earth.
                 </p>
                 <h3 class="subtitle">Our Values</h3>
-                <h4 class="value">Consecrate</h4>
-                <p>We make prayer centered decisions while ingniting hunger for the Word</p>
-                <h4 class="value">Collaborate</h4>
-                <p>Bringing experts together to carry each other's loads in making sure every home has a Bible.
-                    Lay down our logos/egos.
-                </p>
-                <h4 class="value">Celebrate</h4>
-                <p>We don't take ourselves too seriously, but intentionally rejoice in the successes of our staff,
-                    teams and partners.
-                </p>
-                <h4 class="value">Creative</h4>
-                <p>Innovative. Free to fail. Willing to take risks. Never stop learning.</p>
+                <div class="subsection">
+                <h4 class="value">Consecration</h4>
+                    <p>We submit every decision to God and seek His guidance in everything.</p>
+                    <h4 class="value">Clarification</h4>
+                    <p>We make involvement in our mission and vision clear and simple.</p>
+                    <h4 class="value">Collaboration</h4>
+                    <p>We unite individuals and organizations around the goal of a BIble in every home.
+                    </p>
+                    <h4 class="value">Celebration</h4>
+                    <p>We rejoice regularly over the movements of God in the personal and professional lives of all those we touch.
+                    </p>
+                    <h4 class="value">Creation</h4>
+                    <p>We take innovative risks to learn new and more effective ways to accomplish our vision.</p>
+                </div>
             </article>
             <article class="style-section" id="logo">
                 <h2 class="title-section">Our Logo</h2>
